code optimization and use of enums